--- a/README
+++ b/README
@@ -5,9 +5,9 @@ Criar um sistema web em Java que possua as seguintes características:
 * Classes de dados
 
 Persistentes
-Produto (idProduto, nome, valorUnitario, imagem, qtdeEstoque)
-NotaFiscal (idNota, nomeCliente, dataEmissao)
-ItemNota (idNota, idProduto, qtde, valorUnitario)
+Produto (idProduto, nome, valorUnitario, imagem, qtdeEstoque) Feito
+NotaFiscal (idNota, nomeCliente, dataEmissao) Feito
+ItemNota (idNota, idProduto, qtde, valorUnitario) Feito
 
 Transientes
 ItemCarrinho (Produto, qtde)
@@ -16,11 +16,9 @@ Carrinho (ItemCarrinho[ ])
 
 Carrinho, Emitir Nota Fiscal e Visualizar Notas;
 * O procedimento de emitir nota fiscal deve salvar os produtos do carrinho nas tabelas NotaFiscal e ItemNota e destruir o
-carrinho;
-* O login deve ser mantido utilizando cookies;
-* Utilizar Captcha para realizar o login;
-* Permitir acesso a compra de produtos apenas se estiver logado (utilizar filtros);
-* Utilizar Servlets para a camada controladora (evitar utilização de scriptlets na página);
-* Utilizar apenas banco de dados embutido (e.g. HSQLDB);
-
-
+carrinho; Falta Fazer
+* O login deve ser mantido utilizando cookies; Falta Fazer
+* Utilizar Captcha para realizar o login; Feito
+* Permitir acesso a compra de produtos apenas se estiver logado (utilizar filtros); Falta fazer
+* Utilizar Servlets para a camada controladora (evitar utilização de scriptlets na página); Sendo feito
+* Utilizar apenas banco de dados embutido (e.g. HSQLDB); Feito
